# carry_sound

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  receiver.py  sender.py
