[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carry-sound"
version = "0.1.0"
description = "Low-latency audio streaming application for capturing and streaming system audio over local network"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Audio Streaming Team"}
]

dependencies = [
    "sounddevice>=0.4.6",      # Cross-platform audio I/O
    "numpy>=1.24.0",            # Numerical computing for audio data
    "click>=8.1.0",             # CLI interface
    "python-dotenv>=1.0.0",     # Environment variable management
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
carry_sound = "src.sender:main"
carry_sound_receive = "src.receiver:main"

