
[project]
name = "carry-sound"
version = "0.1.0"
description = "Low-latency audio streaming application for capturing and streaming system audio over local network"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Audio Streaming Team"}
]


dependencies = [
    "sounddevice>=0.4.6",  
    "numpy>=1.24.0",         
    "click>=8.1.0",       
    "python-dotenv>=1.0.0",   
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
carry_sound = "src.sender:main"
carry_sound_receive = "src.receiver:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src"]
